[gd_scene load_steps=8 format=3 uid="uid://nks4ph1kbhyv"]

[ext_resource type="Script" uid="uid://5ler2jy6lm5a" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://cnnlswbvjyipf" path="res://icon.svg" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://b5wa6lbvk47p3" path="res://scenes/objects/bullet_fire.tscn" id="3_4ra3w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tfo3t"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 78.10249

[sub_resource type="Gradient" id="Gradient_md0e3"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ra3w"]
gradient = SubResource("Gradient_md0e3")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="enemy" type="CharacterBody2D"]
texture_filter = 1
motion_mode = 1
script = ExtResource("1_md0e3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tfo3t")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 3
rotation = 1.5707964
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_md0e3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_md0e3")

[node name="PointLight2D" type="PointLight2D" parent="."]
shadow_enabled = true
texture = SubResource("GradientTexture2D_4ra3w")
texture_scale = 1.4

[node name="BulletFire" parent="." instance=ExtResource("3_4ra3w")]
position = Vector2(9, 0)

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
